<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main_detalhes"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diaRefeicao"
                android:textColor="@color/colorSecondytext"
                android:textSize="24dp"/>

            <TextView
                android:id="@+id/texdiaRefeicaoDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorSecondytext"
                android:textSize="24dp"/>

        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarDetalhes"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_main_detalhes">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layoutNomeObj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:onClick="btnAcessaProfile">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/item_foto_detalhes"
                    android:layout_width="40dp"
                    android:layout_height="40dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/item_foto_detalhes"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nomeTela2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimarytext"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/objetivo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/person_photo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutNomeObj"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutNomeObj" />

            <ImageButton
                android:id="@+id/btnCurtirDetalhes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:background="@xml/round_shape"
                android:onClick="curtirDetalhes"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/person_photo2"
                app:layout_constraintEnd_toEndOf="parent" />


            <ListView
                android:id="@+id/listNomeRefeicao2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/person_photo2" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listNomeRefeicao2">

                <View
                    android:id="@+id/divi1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BDBDBD" />

                <TextView
                    android:id="@+id/totalConsumido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/totalConsumido"
                    android:layout_below="@id/divi1"
                    android:textColor="@color/colorPrimarytext"/>

                <View
                    android:id="@+id/divi2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/totalConsumido"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#BDBDBD" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divi2"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal"
                            android:textColor="@color/colorPrimarytext"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/texCalQuantidadeTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gramas"/>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carb"
                            android:textColor="@color/colorPrimarytext"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/texCarbQuantidadeTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gramas"/>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prot"
                            android:textColor="@color/colorPrimarytext"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/texProtQuantidadeTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gramas"/>
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prot"
                            android:textColor="@color/colorPrimarytext"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/texGordQuantidadeTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gramas"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <com.mopub.mobileads.MoPubView
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>
